--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -4,6 +4,7 @@ primaryColor = "#d33682"
 
 # Background color for the main content area.
 backgroundColor = "#002b36"
+# backgroundColor = "#005469" 
 
 # Background color used for the sidebar and most interactive widgets.
 secondaryBackgroundColor = "#586e75"
